--- a/style.css
+++ b/style.css
@@ -24,18 +24,19 @@ html, body{
     text-transform: uppercase;
     line-height: 14vw;
     letter-spacing: -4px;
+
 }
 #img-container{
-    background-color: grey;
     height: 100vh;
     width: 100%;
     margin-top: 1vw;
-    position: relative;
+
 }
 #img-container img{
     height: 100%;
     width: 100%;
     object-fit: cover;
+    position: relative;
 }
 #img-container #visit{
     padding: 3vw 2vw;
@@ -48,9 +49,12 @@ html, body{
     border-radius: 50%;    
     opacity: 0;
     scale: 0;
+    z-index: 5;
 }
+
 #img-container #visit a{
     color: white;
     font-size: 1vw;
     text-decoration: none;
+    text-align: center;
 }
