--- a/style.css
+++ b/style.css
@@ -58,3 +58,21 @@ html, body{
     text-decoration: none;
     text-align: center;
 }
+#page2{
+    height: 100vh;
+    width: 100%;
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 3vw 1vw;
+}
+#page2 .elem{
+    height: 100%;
+    width: 32%;
+}
+#page2 .elem img{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
