--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ html, body{
     border-radius: 50%;    
     opacity: 0;
     scale: 0;
-    z-index: 5;
+    z-index: 15;
 }
 
 #img-container #visit a{
@@ -63,9 +63,11 @@ html, body{
     width: 100%;
     position: relative;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
     padding: 3vw 1vw;
+    gap: 1vw;
 }
 #page2 .elem{
     height: 100%;
@@ -75,4 +77,9 @@ html, body{
     height: 100%;
     width: 100%;
     object-fit: cover;
+}
+#page3{
+    height: 100vh;
+    width: 100%;
+    position: relative;
 }
