--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Agbalumo&family=Assistant&family=Ephesis&family=Kalnia&family=Martel+Sans&family=Poppins&family=Raleway:wght@400;800&family=Saira+Extra+Condensed&family=Space+Grotesk&display=swap');
-
+@font-face {
+    font-family: FuturaBold;
+    src: url(./Futura-Bold.ttf);
+}
 *{
     padding: 0;
     margin: 0;
@@ -20,7 +23,7 @@ html, body{
 }
 #page1 h1{
     font-size: 15vw;
-    font-family: futura;
+    font-family: FuturaBold;
     text-transform: uppercase;
     line-height: 14vw;
     letter-spacing: -4px;
