--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -1,11 +1,51 @@
 @media screen and (max-width: 600px) {
-    #page2 .elem{
+    /* #page2 .elem{
         height: 600px;
         width: 450px;
+    } */
+    #page1{
+        min-height: 70vh;
+        width: 100%;
+        padding: 0 3vw;
+        padding-top: 25vh;;
     }
+
     #page1 h1{
-    font-size: 15vw;
-    font-family: Futura;
-    font-weight: bold;
+    font-size: 14vw;
+    letter-spacing: -4px;
+    }
+
+    #img-container{
+        height: 25vh;
+        width: 100%;
+        margin-top: 3vw;
+    }
+    #page2{
+        min-height: 100vh;
+        width: 100%;
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        padding: 5vw 3vw;
+        gap: 1vw;
+    }
+    #page2 .elem{
+        height: 100vh;
+        width: 100%;
+        overflow: hidden;
+        margin-bottom: 3vw;
+    }
+    #page2 .elem img{
+        height: 100%;
+        width: 100%;
+        object-fit: cover;
+        scale: 1.2;
+    }
+    #page3{
+        height: 100vh;
+        width: 100%;
+        position: relative;
     }
 }
