--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -3,8 +3,33 @@
         height: 600px;
         width: 450px;
     } */
-
-
+    #nav-top{
+        height: 100vh;
+        width: 100%;
+        background-color: peachpuff;
+        position: fixed;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        z-index: 999;
+        transform: translate(-50%,-50%);
+        top: 50%;
+        right: -150%;
+    }
+    #nav-top i{
+        font-size: 58px;
+        color: black;
+        position: relative;
+        top: -46%;
+        left: -59%;
+    }
+    #nav-top #navlinks{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        color: black;
+    }
     #nav{
         width: 100%;
         position: fixed;
@@ -44,8 +69,6 @@
     }
     #icons{
         padding: 10px;
-        border-radius: 48px;
-        background-color: peachpuff;
     }
     #nav-mid #icons i{
         font-size: 18px;
