--- a/style.css
+++ b/style.css
@@ -14,6 +14,42 @@ html, body{
     width: 100%;
     scroll-behavior: smooth;
 }
+#nav-top{
+    height: 100vh;
+    width: 100%;
+    background-color: peachpuff;
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 999;
+    transform: translate(-50%,-50%);
+    top: 50%;
+    right: -150%;
+}
+
+.reveal{
+    display: none;
+}
+#nav-top #navlinks{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    color: black;
+}
+#nav-top i{
+    font-size: 58px;
+    color: black;
+    position: relative;
+    top: -46%;
+    left: -52%;
+}
+#navlinks a{
+    font-size: 32px;
+    text-decoration: none;
+
+}
 #nav{
     width: 100%;
     position: fixed;
@@ -52,8 +88,9 @@ html, body{
 }
 #icons{
     padding: 10px;
-    border-radius: 48px;
-    background-color: peachpuff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 #nav-mid #icons i{
     font-size: 18px;
