--- a/style.css
+++ b/style.css
@@ -15,45 +15,28 @@ html, body{
     scroll-behavior: smooth;
 }
 #nav-top{
-    height: 100vh;
     width: 100%;
-    background-color: peachpuff;
-    position: fixed;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    z-index: 999;
-    transform: translate(-50%,-50%);
-    top: 50%;
-    right: -150%;
-}
-
-.reveal{
-    display: none;
+    background-color: peachpuff;
+    z-index: 555;
+    position: relative;
+    transform: translate(0,-800px);
+    height: 100vh;
 }
 #nav-top #navlinks{
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    color: black;
-}
-#nav-top i{
-    font-size: 58px;
-    color: black;
-    position: relative;
-    top: -46%;
-    left: -52%;
-}
-#navlinks a{
-    font-size: 32px;
-    text-decoration: none;
 
 }
 #nav{
     width: 100%;
     position: fixed;
-    z-index: 99;
+    z-index: 9999;
     padding: 24px;
     display: flex;
     align-items: center;
