--- a/style.css
+++ b/style.css
@@ -14,29 +14,62 @@ html, body{
     width: 100%;
     scroll-behavior: smooth;
 }
-#nav-top{
+.menu-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    height: 100%;
     background-color: peachpuff;
-    z-index: 555;
-    position: relative;
-    transform: translate(0,-800px);
-    height: 100vh;
+    display: none;
+    z-index: 9999;
+    flex-direction: column; /* Align children vertically */
+    align-items: center; /* Center children horizontally */
 }
-#nav-top #navlinks{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
 
+.menu-close-btn {
+    cursor: pointer;
 }
+
+.menu-nav {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 1em;
+    padding: 1em;
+    width: 100%;
+}
+
+.menu-cols {
+    display: flex;
+    flex-direction: column; /* Stack children vertically on small screens */
+    align-items: center; /* Center children horizontally */
+    padding: 1em;
+}
+
+.menu-cols > div {
+    flex: 1;
+    padding: 1em 0;
+}
+
+.menu-link {
+    position: relative;
+    width: max-content;
+}
+
+.menu-link a {
+    font-size: 40px;
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
+}
+
+
+
+
 #nav{
     width: 100%;
     position: fixed;
-    z-index: 9999;
+    z-index: 99;
     padding: 24px;
     display: flex;
     align-items: center;
