--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -60,7 +60,6 @@
         width: 100%;
         padding: 0 3vw;
         padding-top: 18vh;
-        ;
     }
 
     #page1 h1 {
@@ -113,20 +112,17 @@
     .child {
         height: 50vh;
         width: 88vw;
-        padding: 15vw;
+        padding: 10vw;
         position: relative;
         display: flex;
         justify-content: center;
         align-items: center;
     }
-
-    .child img {
-        height: 100%;
-        width: 100%;
-        object-fit: cover;
+    #page3 a{
+        color: black;
+        text-decoration: none;
+        font-size: 4vw;
     }
-
-
     /* Adjust styles for small screens */
     .menu-nav {
         flex-direction: column;
