--- a/style.css
+++ b/style.css
@@ -167,8 +167,19 @@ html, body{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 3vw 1vw;
+    padding: 0 1vw;
     gap: 1vw;
+}
+#gallery{
+    margin-top: 3vw;
+    height: 5vw;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#gallery h1{
+    font-family: FuturaBold;
 }
 #main-desc {
     display: flex;
@@ -237,6 +248,18 @@ html, body{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    flex-direction: column;
+}
+#page3 #menu{
+    font-family: FuturaBold;
+    margin-bottom: 3vw;
+}
+#child-container{
+    width: 100%;
+    position: relative;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
     flex-wrap: wrap;
 }
 .child{
@@ -244,12 +267,23 @@ html, body{
     width: 38vw;
     position: relative;
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
+    flex-direction: column;
+    margin: 0 0 5vw 0;
+    padding: 2vw;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
 }
+
 .child img{
-    height: 100%;
+    height: 80%;
     width: 100%;
     object-fit: cover;
+    overflow: hidden;
+}
+#page3 a{
+    color: black;
+    text-decoration: none;
+    font-size: 2vw;
 }
 
