--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
   height: 100%;
   width: 100%;
   scroll-behavior: smooth;
+  background-color: #dfd5c9;
 }
 
 .menu-overlay {
@@ -22,7 +23,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: peachpuff;
+  background-color: rgb(214, 191, 171);
   display: none;
   z-index: 9999;
   flex-direction: column; 
@@ -229,17 +230,6 @@ body {
   object-fit: cover;
   transform: scale(1.2);
 }
-#page2 .elem .buts {
-  height: 50px;
-  width: 80%;
-  position: absolute;
-  z-index: 15;
-  background-color: peachpuff;
-  border-radius: 50px;
-}
-#page2 .elem .buts:hover {
-  height: 200px;
-}
 #page3 {
   min-height: 120vh;
   width: 100%;
@@ -270,6 +260,7 @@ body {
   align-items: center;
   flex-direction: column;
   margin: 0 0 5vw 0;
+  background-color: rgb(214, 191, 171);
   padding: 2vw;
   box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
     rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
@@ -281,10 +272,17 @@ body {
   object-fit: cover;
   overflow: hidden;
 }
+.child button{
+  height: 2rem;
+  width: 6rem;
+  color: white;
+  background-color: rgb(120, 70, 26);
+  border: 0;
+}
 #page3 a {
   color: black;
   text-decoration: none;
-  font-size: 2vw;
+  font-size: 1.5vw;
 }
 #page4 {
   min-height: 100vh;
