--- a/style.css
+++ b/style.css
@@ -293,6 +293,10 @@ body {
 #reviews{
   width: 100%;
   padding: 0 1vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 
 }
 .swiper {
@@ -321,4 +325,14 @@ body {
 }
 .swiper-pagination-bullet{
   background-color: black;
+}
+#reviews button{
+  height: 3rem;
+  width: 12rem;
+  background-color: peachpuff;
+  outline: none;
+}
+#reviews button:hover{
+  background-color: #dfd5c9;
+
 }
