--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -158,4 +158,36 @@
   .swiper-slide {
     height: 25vh;
   }
+  #footer #footer-container{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+    color: white;
+    flex-direction: column;
+    gap: 2rem;
+  }
+  #leftcon{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    color: white;
+    width: 100%;
+  }
+  #rightcon{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    color: white;
+    width: 100%;
+  }
+  .quick-links{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+  }
 }
